--- a/package.json
+++ b/package.json
@@ -9,17 +9,32 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ianvs/prettier-plugin-sort-imports": "^4.1.1",
+    "@prettier/plugin-php": "^0.22.2",
+    "@prettier/plugin-pug": "^3.0.0",
+    "@shopify/prettier-plugin-liquid": "^1.4.1",
+    "next": "14.1.0",
+    "prettier-plugin-astro": "^0.13.0",
+    "prettier-plugin-css-order": "^2.0.1",
+    "prettier-plugin-import-sort": "^0.0.7",
+    "prettier-plugin-jsdoc": "^1.3.0",
+    "prettier-plugin-organize-attributes": "^1.0.0",
+    "prettier-plugin-organize-imports": "^3.2.4",
+    "prettier-plugin-style-order": "^0.2.2",
+    "prettier-plugin-svelte": "^3.1.2",
+    "prettier-plugin-twig-melody": "^0.4.6",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.1.0"
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "postcss": "^8",
-    "tailwindcss": "^3.3.0"
+    "prettier": "^3.2.5",
+    "prettier-plugin-tailwindcss": "^0.5.11",
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5"
   }
 }
