--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "prettier-plugin-svelte": "^3.1.2",
     "prettier-plugin-twig-melody": "^0.4.6",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
