--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "prettier-plugin-svelte": "^3.1.2",
     "prettier-plugin-twig-melody": "^0.4.6",
     "react": "^18",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18",
     "react-icons": "^5.0.1"
   },
