--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react": "^18",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18",
-    "react-icons": "^5.0.1"
+    "react-icons": "^5.0.1",
+    "react-toastify": "^9.1.2"
   },
   "devDependencies": {
     "@types/node": "^20",
