--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-device-detect": "^2.2.3",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
+    "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.2"
   },
   "devDependencies": {
