--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-dom": "^18",
     "react-icons": "^5.0.1",
     "react-spinners": "^0.13.8",
-    "react-toastify": "^9.1.2"
+    "react-toastify": "^9.1.2",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@types/node": "^20",
