--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@prettier/plugin-php": "^0.22.2",
     "@prettier/plugin-pug": "^3.0.0",
     "@shopify/prettier-plugin-liquid": "^1.4.1",
+    "@tanstack/react-query": "^5.64.1",
+    "axios": "^1.7.9",
     "mysql2": "^3.9.1",
     "next": "14.1.0",
     "prettier-plugin-astro": "^0.13.0",
@@ -33,6 +35,7 @@
     "zustand": "^4.5.2"
   },
   "devDependencies": {
+    "@tanstack/eslint-plugin-query": "^5.62.16",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
