--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,5 @@
 {
-  "plugins": [
-    "prettier-plugin-svelte",
-    "prettier-plugin-organize-imports",
-    "prettier-plugin-tailwindcss"
-  ],
-  "pluginSearchDirs": false
+  "plugins": ["prettier-plugin-svelte", "prettier-plugin-organize-imports", "prettier-plugin-tailwindcss"],
+  "pluginSearchDirs": false,
+  "printWidth": 120
 }
