refactor/prettier 코드포맷팅 설정 변경 및 반영 + buttonAtom 일부 개선

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,8 @@
 {
   "plugins": ["prettier-plugin-svelte", "prettier-plugin-organize-imports", "prettier-plugin-tailwindcss"],
   "pluginSearchDirs": false,
-  "printWidth": 140
+  "printWidth": 140,
+  "singleQuote": true,
+  "jsxSingleQuote": true,
+  "quoteProps": "preserve"
 }
