--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.7.9",
     "mysql2": "^3.9.1",
     "next": "14.1.0",
+    "next-auth": "^4.24.11",
     "prettier-plugin-astro": "^0.13.0",
     "prettier-plugin-css-order": "^2.0.1",
     "prettier-plugin-import-sort": "^0.0.7",
